# portal-backend

./: .env  Portal_Pesantren_API.postman_collection.json  frontend.md  main.py  manage.py  pyproject.toml  requirements.txt  test_validation.py  vercel.json
core/: __init__.py  auth_middleware.py  db.py  exceptions.py
dto/: __init__.py  about_us_dto.py  application_dto.py  base_dto.py  consultation_dto.py  news_dto.py  pesantren_dto.py  review_dto.py  user_dto.py
models/: __init__.py  about_us.py  application.py  base.py  consultation.py  news.py  pesantren.py  review.py  token_blocklist.py  user.py
routers/: __init__.py  about_us_router.py  app_router.py  application_fastapi_router.py  application_router.py  base_router.py  consultation_fastapi_router.py  consultation_router.py  news_fastapi_router.py  news_router.py  pesantren_fastapi_router.py  pesantren_router.py  review_fastapi_router.py  review_router.py  user_fastapi_router.py  user_router.py
services/: __init__.py  about_us.py  application_service.py  base_service.py  consultation_service.py  jwt_service.py  news_service.py  pesantren_service.py  review_service.py  user_service.py
