[project]
name = "portal-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "pip>=25.2",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "pyjwt>=2.8.0",
]
