[project]
name = "portal-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiofiles==24.1.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "apscheduler==3.11.0",
    "async-timeout==5.0.1",
    "bcrypt==4.3.0",
    "beanie==1.29.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==44.0.2",
    "deprecated==1.2.18",
    "dnspython==2.7.0",
    "ecdsa==0.19.0",
    "email-validator==2.2.0",
    "fakeredis==2.28.1",
    "fastapi==0.115.11",
    "fastapi-cli==0.0.7",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "lazy-model==0.2.0",
    "limits==4.2",
    "loguru==0.7.3",
    "mangum==0.19.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mongomock==4.3.0",
    "mongomock-motor==0.0.35",
    "motor==3.7.0",
    "packaging==24.2",
    "passlib==1.7.4",
    "pillow==11.1.0",
    "pluggy==1.5.0",
    "pyasn1==0.4.8",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pymongo==4.11.2",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-order==1.3.0",
    "python-dotenv==1.0.1",
    "python-jose==3.4.0",
    "python-magic-bin==0.4.14",
    "python-multipart==0.0.20",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "rich==13.9.4",
    "rich-toolkit==0.13.2",
    "rsa==4.9",
    "sentinels==1.0.0",
    "setuptools==76.1.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "slowapi==0.1.9",
    "slugify==0.0.1",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "starlette==0.46.0",
    "toml==0.10.2",
    "typer==0.15.2",
    "typing-extensions==4.12.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "uvicorn==0.34.0",
    "watchfiles==1.0.4",
    "websockets==15.0",
    "win32-setctime==1.2.0",
    "wrapt==1.17.2"
]

[tool.setuptools.packages.find]
include = ["dto", "core", "models", "mappers", "modules", "routers", "services"]
